syntax = "proto3";

package spaceship.socket;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "spaceship/api/api.proto";

option go_package = "socketapi";

option java_multiple_files = true;
option java_outer_classname = "SpaceShipSocket";
option java_package = "tr.com.apps.spaceship.socketapi";

option csharp_namespace = "SpaceShip";

option objc_class_prefix = "SSP";

message Envelope {
    string cid = 1;
    oneof message {
        Error error = 2;
        MatchStart match_start = 3;

        MatchFind match_find = 4;
        MatchJoin match_join = 5;
        MatchLeave match_leave = 6;

        MatchEntry match_entry = 7;
    }

}

message MatchUpdate {
    string sessionID = 1;

}

// A logical error which may occur on the server.
message Error {
    // The selection of possible error codes.
    enum Code {
        // An unexpected result from the server.
        RUNTIME_EXCEPTION = 0;
        // The server received a message which is not recognised.
        UNRECOGNIZED_PAYLOAD = 1;
        // A message was expected but contains no content.
        MISSING_PAYLOAD = 2;
        // Fields in the message have an invalid format.
        BAD_INPUT = 3;
        // The match id was not found.
        MATCH_NOT_FOUND = 4;
        // The match join was rejected.
        MATCH_JOIN_REJECTED = 5;
        // The runtime function does not exist on the server.
        RUNTIME_FUNCTION_NOT_FOUND = 6;
        // The runtime function executed with an error.
        RUNTIME_FUNCTION_EXCEPTION = 7;
    }

    // The error code which should be one of "Error.Code" enums.
    int32 code = 1;
    // A message in English to help developers debug the response.
    string message = 2;
    // Additional error details which may be different for each response.
    map<string, string> context = 3;
}

message MatchStart {
    string game_name = 1;
}

message MatchFind {
    string game_name = 1;
    map<string, string> queue_properties = 2;
}

message MatchJoin {
    string match_id = 1;
}

message MatchLeave {
    string match_id = 1;
}

message MatchEntry {
    enum State {
        MATCH_FINDING_PLAYERS = 0;
        GAME_CREATED = 1;
    }
    message MatchUser {
        string user_id = 1;
    }

    string match_id = 1;
    int32 state = 2;

    int32 max_count = 3;
    int32 active_count = 4;
    string game = 5;

    repeated MatchUser users = 6;
}